WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91760
[CSS Exclusions] - Code cleanup: make shape parsing use isComma() instead of manual checks
https://bugs.webkit.org/show_bug.cgi?id=91760
Summary
[CSS Exclusions] - Code cleanup: make shape parsing use isComma() instead of ...
Bem Jones-Bey
Reported
2012-07-19 10:52:06 PDT
The CSSParser::parseExclusionShapePolygon method uses an isComma() function to detect a comma when parsing the argument list. The other shape parsing methods are not using this function. To reduce code duplication and make the code easier to read, those methods (CSSParser::parseExclusionShapeEllipse, CSSParser::parseExclusionShapeCircle, CSSParser::parseExclusionShapeRectangle) should use the isComma() function.
Attachments
Bug fix
(2.16 KB, patch)
2012-07-19 11:56 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Bem Jones-Bey
Comment 1
2012-07-19 11:56:40 PDT
Created
attachment 153318
[details]
Bug fix Change the aforementioned methods to use isComma.
Eric Seidel (no email)
Comment 2
2012-07-19 12:20:10 PDT
Comment on
attachment 153318
[details]
Bug fix OK.
WebKit Review Bot
Comment 3
2012-07-19 12:32:40 PDT
Comment on
attachment 153318
[details]
Bug fix Clearing flags on attachment: 153318 Committed
r123135
: <
http://trac.webkit.org/changeset/123135
>
WebKit Review Bot
Comment 4
2012-07-19 12:32:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug