[CSS Exclusions] - Code cleanup: make shape parsing use isComma() instead of manual checks https://bugs.webkit.org/show_bug.cgi?id=91760

Patch by Bem Jones-Bey <bjonesbe@adobe.com> on 2012-07-19
Reviewed by Eric Seidel.

Remove code duplication by making the rectangle, circle, and ellipse
methods use isComma() to detect a comma.

No new tests needed: no new functionality added.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseExclusionShapeRectangle):
(WebCore::CSSParser::parseExclusionShapeCircle):
(WebCore::CSSParser::parseExclusionShapeEllipse):

git-svn-id: svn://svn.chromium.org/blink/trunk@123135 bbb929c8-8fbe-4397-9dbb-9b2b20218538